fix: api endpoints and rename repo
